The method print_collapable_region no longer interacts with MathJax in any kind of sensible way, making the facts impossible to read. For this reason I've put them into plain <div> tags, with a style which contrasts well with the worked solutions.

--- a/styles.css
+++ b/styles.css
@@ -160,6 +160,13 @@ body.path-question-type-stack .questionvariables {
 body.path-question-type-stack div.questionvariables {
     padding-bottom: 0.1em;
 }
+body.path-question-type-stack .factsheet {
+    color: #000;
+    border: 1px solid #000;
+    background: #eee;
+    padding: 1em;
+}
+
 body.path-question-type-stack .undeployedvariant .singlebutton,
 body.path-question-type-stack .undeployedvariant .singlebutton div,
 body.path-question-type-stack .undeployedvariant .singlebutton form {
